cpp/test/Slice/errorDetection/IllegalMetadata.ice
//
// Copyright (c) ZeroC, Inc. All rights reserved.
//

[["suppress-warning"]] // okay

module Hello {}

[["suppress-warning"]] // error
